<resources>
    <string name="app_name">ElNoticiero</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="section">"Section: "</string>
    <string name="author">"Author: "</string>
    <string name="selectYourNewsProvider">"Get your News\nChoose Your Free Source:"</string>
    <string name="todayIs">"Today is "</string>
    <string name="category">"Category: "</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="no_news_found">Sorry, no news found.\nPlease try with other parameters.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">"Date: "</string>
    <string name="retrievingNews">Wait a moment please.\nRetrieving news as you request...</string>
    <string name="favorites">Favorite News</string>
    <string name="clearFilters">Clear Filters</string>
    <string name="filter">Filter</string>
    <string name="news_deleted_from_favorites">News deleted from favorites.</string>
    <string name="news_added_to_favorites">News added to favorites.</string>
    <string name="all_news_deleted_from_favorites">All news have been deleted from favorites.</string>
    <string name="yes">Yes</string>
    <string name="areYouSureDeleteAllFavorites">¿Estás seguro de que quieres eliminar todas las noticias de tus favoritos?</string>
    <string name="no">No</string>
    <string name="server_no_response">Error: Server unavailable.\nPlease, try again in few moments.</string>
    <string name="areYouSureDeleteFromFavorites">Are you sure to delete this news from your favorites?</string>
    <string name="myLocation">My location</string>
    <string name="locationSelected">Location selected</string>
    <string name="start_date">Earliest date (YYYY-MM-DD)</string>
    <string name="end_date">Latest date (YYYY-MM-DD)</string>
    <string name="numberArticles">Max news</string>
    <string name="countryParameter">Country (ex: es, us)</string>
    <string name="languageParameter">Languaje (ex: es, en)</string>
    <string name="radiusParameter">Radius: 10 km</string>
    <string name="useLocation">Use location</string>
    <string name="getMyLocation">Get my location</string>
    <string name="applyFilters">Apply filters</string>
    <string name="selectCountries">Select country/es</string>
    <string name="availableCountries">Available countries list</string>
    <string name="selectCountriesNews">Select country or countries to get news</string>
    <string name="yourName">Your name</string>
    <string name="whoAreU">Personal</string>
    <string name="yourEmail">Your e/mail</string>
    <string name="selectLanguages">Select languages</string>
    <string name="availableLanguages">Available languages</string>
    <string name="newsNumber">Number of news to get</string>
    <string name="newsNumberSummary">Select the number of news you want to get</string>
    <string name="newsDate">Earliest date</string>
    <string name="newsDateSummary">Select earliest date to show</string>
    <string name="default_user_name">User</string>
    <string name="hello">"Hello "</string>
    <string name="noFavoriteNews">There aren\'t favorite news yet.</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="logo_emisora">Logo radio</string>
    <string name="favorito">Favorite</string>
    <string name="reproducir_pausar">Play/Pause</string>
    <string name="detener">Stop</string>
    <string name="newspaper">Digital\nNewspapers</string>
    <string name="tvChannels">Canales\nTV</string>
    <string name="radioChannels">Emisoras\nRadio</string>
    <string name="stopInstruction">Press here\nto stop radio\nand exit.</string>
    <string name="player">Radio player</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="mainSettings">Main settings</string>
    <string name="stopPlayer">Stop radio player</string>
    <string name="deleteAll">Delete all</string>
    <string name="suscribeTitle">Contenido Premium</string>
    <string name="suscribeMessage">This channel is only for premium suscriptions.\n¿Do you want to suscribe?</string>
    <string name="suscribeAcceptButton">Accept</string>
    <string name="suscribeCancelButton">Cancel</string>
    <string name="allRightsReserved">©2025 Juanjo Alberola\nAll rights reserved\nmuvment.com</string>
    <string name="premium_version_enabled">TV channel premium mode enabled!</string>
    <string name="premium_version_disabled">TV channel premium mode disabled!</string>
    <string name="delete">Delete</string>
</resources>