<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_vector"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_tv"
            android:icon="@drawable/tvico"
            android:title="@string/tvChannels"
            />
        <item
            android:id="@+id/nav_radio"
            android:icon="@drawable/radioico"
            android:title="@string/radioChannels"
            />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/newspaperico"
            android:title="@string/newspaper"
            />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/newspaper_24"
            android:title="@string/favorites"
            />
    </group>
    <item
        android:id="@+id/divider_1"
        android:title=""
        app:actionLayout="@layout/drawer_divider"
        android:enabled="false"/>
    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_24"
            android:title="@string/mainSettings"
            />

        <item
            android:id="@+id/nav_stop"
            android:icon="@drawable/ic_media_stop"
            android:title="@string/stopPlayer"
            />

    </group>

</menu>