<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/etNewsNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numberArticles"
        android:inputType="number" />

    <EditText
        android:id="@+id/etCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/countryParameter" />

    <EditText
        android:id="@+id/etLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/languageParameter" />" />

    <TextView
        android:id="@+id/tvRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radiusParameter" />

    <SeekBar
        android:id="@+id/sbRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="200"
        android:progress="10" />

    <CheckBox
        android:id="@+id/cbUseLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/useLocation" />

    <Button
        android:id="@+id/btnGetCurrentLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getMyLocation" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <Button
        android:id="@+id/btnApplyFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/applyFilters" />

</LinearLayout>