<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_padding"
    android:background="@drawable/pastel_blue_transparent"
    android:fitsSystemWindows="true"
    tools:context=".fragments.news.DetailedFavoriteNewsFragment">

    <LinearLayout
        android:id="@+id/scrollViewDetailedNews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparentWhite">

            <TextView
                android:id="@+id/tvCategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tvCategoryTitle"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Politics" />
            <TextView
                android:id="@+id/tvDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/tvDate"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/date"
                />
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                tools:text="22/02/2025"
                />

            <ImageView
                android:id="@+id/articleImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="@dimen/default_padding"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/tvCategory"

                />

            <TextView
                android:id="@+id/tvArticleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/articleImage"
                tools:text="ESTO ES UN TITULO DE PRUEBA" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                app:layout_constraintEnd_toStartOf="@id/tvAuthorName"
                app:layout_constraintTop_toBottomOf="@+id/tvArticleTitle" />

            <TextView
                android:id="@+id/tvAuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvArticleTitle"
                tools:text="Fulanito" />

            <ImageView
                android:id="@+id/imgFavorite"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="2dp"
                android:src="@drawable/favorite_icon"
                app:layout_constraintTop_toBottomOf="@id/tvArticleTitle"
                app:layout_constraintStart_toStartOf="@id/articleImage"
                />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgFavorite"
                android:paddingBottom="500dp"
                android:clipToPadding="false">
                <TextView
                    android:id="@+id/tvArticleBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding"
                    android:paddingBottom="200dp"

                    tools:text="Esto es un texto de prueba"
                    />
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>